--- a/index.html
+++ b/index.html
@@ -2,51 +2,52 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
+  <link href="index.css" rel="stylesheet">
   <title>Frontend Mentor | Newsletter sign-up form with success message</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
 <body>
+  <main>
+    <div class="container">
+      <!-- Sign-up form start -->
 
-  <!-- Sign-up form start -->
+      Stay updated!
 
-  Stay updated!
+      Join 60,000+ product managers receiving monthly updates on:
 
-  Join 60,000+ product managers receiving monthly updates on:
+      Product discovery and building what matters
+      Measuring to ensure updates are a success
+      And much more!
 
-  Product discovery and building what matters
-  Measuring to ensure updates are a success
-  And much more!
+      Email address
+      email@company.com
 
-  Email address
-  email@company.com
+      Subscribe to monthly newsletter
 
-  Subscribe to monthly newsletter
+      <!-- Sign-up form end -->
 
-  <!-- Sign-up form end -->
+      <!-- Success message start -->
 
-  <!-- Success message start -->
+      Thanks for subscribing!
 
-  Thanks for subscribing!
+      A confirmation email has been sent to ash@loremcompany.com. 
+      Please open it and click the button inside to confirm your subscription.
 
-  A confirmation email has been sent to ash@loremcompany.com. 
-  Please open it and click the button inside to confirm your subscription.
+      Dismiss message
 
-  Dismiss message
-
-  <!-- Success message end -->
+      <!-- Success message end -->
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+      <div class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+        Coded by <a href="#">Your Name Here</a>.
+      </div>
+    </div>
+  </main>
+  <script src="index.js"></script>
 </body>
 </html>
