--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <img class="activeImg" src="/assets/images/icon-success.svg" alt="success">
           <p class="header">Thanks for subscribing!</p>
           <p class="sub">
-            A confirmation email has been sent to <span class="bold">ash@loremcompany.com.</span>
+            A confirmation email has been sent to <span class="bold"></span>.
             Please open it and click the button inside to confirm your subscription.
           </p>
         </div>
